--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=xine-lib
-pkgver=1.2.9
-pkgrel=11
+pkgver=1.2.10
+pkgrel=1
 pkgdesc="A multimedia playback engine"
 arch=('x86_64')
 url="https://www.xine-project.org"
@@ -30,15 +30,8 @@ optdepends=('imagemagick: for using the imagemagick plugin' \
             'libvdpau: for using the VDPAU plugin' \
             'smbclient: for using the samba plugin' \
             'gdk-pixbuf2: for using the gdk-pixbuf plugin')
-source=(https://downloads.sourceforge.net/project/xine/xine-lib/$pkgver/xine-lib-$pkgver.tar.xz
-        xine-lib-imagemagick7.patch)
-sha1sums=('ad6e72b7d8ff6172a8a170ab1bc38577ae321371'
-          '7604ce72297f5b123a0bb53ebf5f1606e2ec0bad')
-
-prepare() {
-  cd $pkgname-$pkgver
-  patch -p1 -i ../xine-lib-imagemagick7.patch # PLD linux patch
-}
+source=(https://downloads.sourceforge.net/project/xine/xine-lib/$pkgver/xine-lib-$pkgver.tar.xz)
+sha256sums=('9cb3f069d3c1ffb7456ea91a936a85bbb07ac2ab7be1e9d0d2c94ffe4110dc57')
 
 build() {
   cd ${pkgname}-${pkgver}
