--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -3,11 +3,12 @@
 pkgname=xournalpp
 pkgver=1.0.17
 _commit=12febf7e577aeb8756464c23713ef9a43729eede
-pkgrel=1
+pkgrel=2
 pkgdesc='Handwriting notetaking software with PDF annotation support'
 url='https://github.com/xournalpp/xournalpp'
 license=('GPL2')
 arch=('x86_64')
+optdepends=('texlive-latexextra: LaTeX package')
 makedepends=('git' 'cmake' 'doxygen' 'graphviz')
 depends=('gtk3' 'poppler-glib' 'libxml2' 'portaudio' 'libsndfile' 'lua'
          'libzip' 'texlive-bin')
